k8s/manifests/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: golang-app
  labels:
    app: golang-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: golang-app
  type: ClusterIP
