k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "golang-app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang-app
            port:
              number: 80
